# StarletSamples

./: .gitignore  CMakeLists.txt  README.md
assets/models/: cow_xyz_n_rgba_UV.ply
assets/scenes/: Default.txt  EmptyScene.txt  GridScene.txt  PrimitiveScene.txt  SceneTest_orig.txt  TestScene.txt  VelocityScene.txt
src/: main.cpp
